@@ -23,13 +23,15 @@ package com.hedera.services.state.merkle;
 import com.google.common.base.MoreObjects;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.InvalidProtocolBufferException;
+import com.hedera.services.exceptions.UnknownHederaFunctionality;
 import com.hedera.services.legacy.core.jproto.JKey;
 import com.hedera.services.state.serdes.DomainSerdes;
 import com.hedera.services.state.submerkle.EntityId;
 import com.hedera.services.state.submerkle.RichInstant;
-import com.hedera.services.utils.EntityNum;
 import com.hedera.services.utils.EntityIdUtils;
+import com.hedera.services.utils.EntityNum;
 import com.hedera.services.utils.MiscUtils;
+import com.hederahashgraph.api.proto.java.HederaFunctionality;
 import com.hederahashgraph.api.proto.java.Key;
 import com.hederahashgraph.api.proto.java.SchedulableTransactionBody;
 import com.hederahashgraph.api.proto.java.SignedTransaction;
@@ -55,7 +57,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import static com.google.protobuf.ByteString.copyFrom;
 import static com.hedera.services.utils.MiscUtils.asTimestamp;
 import static com.hedera.services.utils.MiscUtils.describe;
-import static java.util.stream.Collectors.toList;
+import static com.hederahashgraph.api.proto.java.HederaFunctionality.NONE;
 
 public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNum> {
 	static final int PRE_RELEASE_0180_VERSION = 1;
@@ -63,7 +65,7 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 
 	static final int CURRENT_VERSION = RELEASE_0180_VERSION;
 
-	static final int NUM_ED25519_PUBKEY_BYTES = 32;
+	static final int MAX_NUM_PUBKEY_BYTES = 33;
 
 	static final long RUNTIME_CONSTRUCTABLE_ID = 0x8d2b7d9e673285fcL;
 	static DomainSerdes serdes = new DomainSerdes();
@@ -107,8 +109,8 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 	}
 
 	/* Notary functions */
-	public boolean witnessValidEd25519Signature(byte[] key) {
-		var usableKey = copyFrom(key);
+	public boolean witnessValidSignature(byte[] key) {
+		final var usableKey = copyFrom(key);
 		if (notary.contains(usableKey)) {
 			return false;
 		} else {
@@ -144,17 +146,19 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 				.build();
 	}
 
-	public boolean hasValidEd25519Signature(byte[] key) {
+	public boolean hasValidSignatureFor(byte[] key) {
 		return notary.contains(copyFrom(key));
 	}
 
 	/* Object */
+
 	/**
 	 * Two {@code MerkleSchedule}s are identical as long as they agree on
 	 * the transaction being scheduled, the admin key used to manage it,
 	 * and the memo to accompany it.
 	 *
-	 * @param o the object to check for equality
+	 * @param o
+	 * 		the object to check for equality
 	 * @return whether {@code this} and {@code o} are identical
 	 */
 	@Override
@@ -189,7 +193,7 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 				.add("payer", readablePayer())
 				.add("schedulingAccount", schedulingAccount)
 				.add("schedulingTXValidStart", schedulingTXValidStart)
-				.add("signatories", signatories.stream().map(CommonUtils::hex).collect(toList()))
+				.add("signatories", signatories.stream().map(CommonUtils::hex).toList())
 				.add("adminKey", describe(adminKey));
 		if (resolutionTime != null) {
 			helper.add("resolutionTime", resolutionTime);
@@ -210,7 +214,7 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 		resolutionTime = serdes.readNullableInstant(in);
 		int numSignatories = in.readInt();
 		while (numSignatories-- > 0) {
-			witnessValidEd25519Signature(in.readByteArray(NUM_ED25519_PUBKEY_BYTES));
+			witnessValidSignature(in.readByteArray(MAX_NUM_PUBKEY_BYTES));
 		}
 		if (version >= RELEASE_0180_VERSION) {
 			number = in.readInt();
@@ -266,7 +270,7 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 
 		/* Signatories are mutable */
 		for (byte[] signatory : signatories) {
-			fc.witnessValidEd25519Signature(signatory);
+			fc.witnessValidSignature(signatory);
 		}
 
 		return fc;
@@ -384,6 +388,14 @@ public class MerkleSchedule extends AbstractMerkleLeaf implements Keyed<EntityNu
 			throw new IllegalStateException("Schedule not executed, cannot return execution time!");
 		}
 		return resolutionTime.toGrpc();
+	}
+
+	public HederaFunctionality scheduledFunction() {
+		try {
+			return MiscUtils.functionOf(ordinaryScheduledTxn);
+		} catch (UnknownHederaFunctionality ignore) {
+			return NONE;
+		}
 	}
 
 	public TransactionBody ordinaryViewOfScheduledTxn() {
